--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -44,7 +44,7 @@
                       <div class="col-12">
                         <div class="mb-4 fs-2 fw-bold">Convert video to supported formats using Handbrake</div>
                         <div class="my-4">
-                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fw-bold">2018</small></span>
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fw-bold">2025</small></span>
                             <span class="ms-2">
                             </span>
                           </div>
@@ -56,13 +56,22 @@
                       <div class="col-12">
                         <div class="fs-5 mb-2 fw-bold mt-5">Step 2</div>
                         <p>Open Handbrake Application and import video file which is needed to convert</p>
-                        <img src="./hand-brake-dag-and-drop.png" class="img-fluid mt-4 me-5" alt="">
+                        <img src="./hand-brake-dag-and-drop.png" class="img-fluid w-md-50 mt-4 me-5" alt="">
                       </div>
                       <div class="col-12">
-                        <div class="fs-4 fw-bold mt-4">Heading 1</div>
-                        <div class="fs-5 fw-bold my-3">Heading 2</div>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                        <img src="./assets/images/Rectangle 5.png" class="img-fluid mt-3" alt="">
+                        <div class="fs-5 mb-2 fw-bold mt-5">Step 3</div>
+                        <p>Set output format and other settings</p>
+                        <img src="./2-handbrake-select-file-type.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
+                      </div>
+                      <div class="col-12">
+                        <div class="fs-5 mb-2 fw-bold mt-5">Step 4</div>
+                        <p>Click Start encode</p>
+                        <img src="./3-start-encode.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
+                      </div>
+                      <div class="col-12">
+                        <div class="fs-5 mb-2 fw-bold mt-5">Step 5</div>
+                        <p>Convert will be processed.</p>
+                        <img src="./4-handbrake-loading.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
                       </div>
                     </div>
                   </div>
