--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-12 mt-4">
+                  <!-- <div class="col-12 mt-4">
                     <div class="row pb-3 border-bottom">
                       <div class="col-12">
                         <div class="mt-3 mt-md-0">
@@ -89,24 +89,24 @@
                       </div>
                     </div>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
            </div>
-           <footer class="py-2 py-lg-5">
-            <div class="container">
-              <div class="d-flex justify-content-center">
-                <ul class="d-flex list-unstyled">
-                  <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/fb.svg" alt=""></a></li>
-                  <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/insta.svg" alt=""></a></li>
-                  <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/x.svg" alt=""></a></li>
-                  <li><a class="text-decoration-none"><img src="./assets/images/icons/LinkedIn.svg" alt=""></a></li>
-                </ul>
-              </div>
-              <div class="text-center">Copyright ©<div id="footer-year" class="d-inline"></div> All rights reserved </div>
-            </div>
-           </footer>
     </div>
+    <footer class="py-2 py-lg-5">
+      <div class="container">
+        <div class="d-flex justify-content-center">
+          <!-- <ul class="d-flex list-unstyled">
+            <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/fb.svg" alt=""></a></li>
+            <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/insta.svg" alt=""></a></li>
+            <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/x.svg" alt=""></a></li>
+            <li><a class="text-decoration-none"><img src="./assets/images/icons/LinkedIn.svg" alt=""></a></li>
+          </ul> -->
+        </div>
+        <div class="text-center">Copyright ©<div id="footer-year" class="d-inline"></div> All rights reserved </div>
+      </div>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./assets/script.js"></script>
 </body>
