--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Convert video to supported formats using Handbrake">
+    <meta name="keywords" content="handbrake, video conversion, convert video to mp4, RAV1N encoding">
+    <meta name="author" content="Naveen V">
     <link rel="stylesheet" href="../../assets/bootstrap.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-grid.min.css">
@@ -12,65 +15,67 @@
 <body>
     <div class="page-main">
         <!-- navbar mobile screens -->
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon text-white"></span>
-            </button>
-            <div class="collapse navbar-collapse navbar-light" id="navbarNav">
-              <ul class="navbar-nav ms-lg-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Works</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
+        <div class="shadow">
+          <nav class="navbar navbar-expand-lg container-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily Tech Help</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon text-white"></span>
+              </button>
+              <div class="collapse navbar-collapse navbar-light" id="navbarNav">
+                <ul class="navbar-nav ms-lg-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li> -->
+                </ul>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
+         </div>
           <!-- Recent posts -->
 
           <!-- blog article -->
-           <div class="py-4">
+           <div class="py-5">
               <div class="container-lg">
                 <div class="row">
                   <div class="col-12">
                     <div class="row pb-3">
                       <div class="col-12">
-                        <div class="mb-4 fs-2 fw-bold">Convert video to supported formats using Handbrake</div>
+                        <h1 class="mb-4 fs-2 fw-bold">Convert video to supported formats using Handbrake</h1>
                         <div class="my-4">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fw-bold">2025</small></span>
                             <span class="ms-2">
                             </span>
                           </div>
-                         <div class="fs-5 mb-2 fw-bold mt-5">Step 1</div>
+                         <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 1</div>
                          <p>
-                          Download and install Handbrake from the official website. You can download it from the <a target="_blank" href="https://handbrake.fr/">official website</a>.
+                          Download and install Handbrake from the <a target="_blank" href="https://handbrake.fr/">official website</a>
                           </p>
                       </div>
                       <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5">Step 2</div>
+                        <div class="fs-5 mb-2 fw-bold mt-3 text-gray">Step 2</div>
                         <p>Open Handbrake Application and import video file which is needed to convert</p>
-                        <img src="./hand-brake-dag-and-drop.png" class="img-fluid w-md-50 mt-4 me-5" alt="">
+                        <img src="./hand-brake-dag-and-drop.png" class="img-fluid w-md-50 w-md-75 lg-w-50 mt-4 me-5" alt="">
                       </div>
                       <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5">Step 3</div>
+                        <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 3</div>
                         <p>Set output format and other settings</p>
                         <img src="./2-handbrake-select-file-type.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
                       </div>
                       <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5">Step 4</div>
-                        <p>Click Start encode</p>
+                        <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 4</div>
+                        <p>Click "Start encode" to initiate the conversion</p>
                         <img src="./3-start-encode.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
                       </div>
                       <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5">Step 5</div>
-                        <p>Convert will be processed.</p>
+                        <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 5</div>
+                        <p>Conversion will be processed. After completion check converted file on the saved location.</p>
                         <img src="./4-handbrake-loading.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
                       </div>
                     </div>
