--- a/index.html
+++ b/index.html
@@ -12,37 +12,40 @@
 <body>
     <div class="page-main">
         <!-- navbar mobile screens -->
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon text-white"></span>
-            </button>
-            <div class="collapse navbar-collapse navbar-light" id="navbarNav">
-              <ul class="navbar-nav ms-lg-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <!-- <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li> -->
-              </ul>
+         <!-- <div class="shadow position-fixed w-100 z-index-lg top-0"> -->
+         <div class="shadow">
+          <nav class="navbar navbar-expand-lg container-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily Tech Help</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon text-white"></span>
+              </button>
+              <div class="collapse navbar-collapse navbar-light" id="navbarNav">
+                <ul class="navbar-nav ms-lg-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li> -->
+                </ul>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
+         </div>
           <!-- Recent posts -->
 
           <!-- featured works -->
-           <div class="py-3">
-              <div class="container-lg">
-                <div class="row">
+           <div class="py-3" style="z-index: 0;">
+              <div class="container-lg py-5">
+                <div class="row m-0">
                   <div class="col-12">
                     <div class="row pb-3 border-bottom">
                       <div class="col-12">
-                        <div class="mb-5 fs-2 fw-bold">Blogs</div>
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                         <div class="mt-3 mt-md-0">
                           <div class="fw-semibold fs-5">How to convert video using Handbrake</div>
                           <div class="my-2">
@@ -52,7 +55,7 @@
                             <p class="pe-md-5">
                               Convert video to supported formats using Handbrake
                             </p>
-                            <a href="./blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html" class="btn btn-secondary btn-sm">Read</a>
+                            <a href="./blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
                     </div>
@@ -94,7 +97,7 @@
               </div>
            </div>
     </div>
-    <footer class="py-2 py-lg-5">
+    <footer class="py-2 py-lg-3">
       <div class="container">
         <div class="d-flex justify-content-center">
           <!-- <ul class="d-flex list-unstyled">
@@ -104,7 +107,7 @@
             <li><a class="text-decoration-none"><img src="./assets/images/icons/LinkedIn.svg" alt=""></a></li>
           </ul> -->
         </div>
-        <div class="text-center">Copyright ©<div id="footer-year" class="d-inline"></div> All rights reserved </div>
+        <div class="text-center fs--1">Copyright ©<div id="footer-year" class="d-inline"></div> All rights reserved </div>
       </div>
      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
