--- a/samples/blog-details.html
+++ b/samples/blog-details.html
@@ -12,31 +12,33 @@
 <body>
     <div class="page-main">
         <!-- navbar mobile screens -->
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon text-white"></span>
-            </button>
-            <div class="collapse navbar-collapse navbar-light" id="navbarNav">
-              <ul class="navbar-nav ms-lg-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Works</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
+        <div class="shadow">
+          <nav class="navbar navbar-expand-lg container-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily Tech Help</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon text-white"></span>
+              </button>
+              <div class="collapse navbar-collapse navbar-light" id="navbarNav">
+                <ul class="navbar-nav ms-lg-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li> -->
+                </ul>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
+         </div>
           <!-- Recent posts -->
 
           <!-- blog article -->
-           <div class="py-4">
+           <div class="py-5">
               <div class="container-lg">
                 <div class="row">
                   <div class="col-12">
