handbrake info in blog details

--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -53,6 +53,7 @@
                             <span class="ms-2">
                             </span>
                           </div>
+                          <p class="text-gray">HandBrake is a open-source tool, built by volunteers, for converting video from nearly any format to a selection of modern, widely supported codecs.</p>
                          <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 1</div>
                          <p>
                           Download and install Handbrake from the <a target="_blank" href="https://handbrake.fr/">official website</a>
