--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
                 <span class="navbar-toggler-icon text-white"></span>
               </button>
               <div class="collapse navbar-collapse navbar-light" id="navbarNav">
-                <ul class="navbar-nav ms-lg-auto">
+                <ul class="navbar-nav ms-lg-auto align-items-center">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
+                  <li>
+                    <a href="https://www.facebook.com/profile.php?id=61574216155418" class="mt-4"><i class="fa-brands fa-facebook"></i></a>
+                </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
                   </li>
@@ -56,6 +59,20 @@
                               Convert video to supported formats using Handbrake
                             </p>
                             <a href="./blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">How to Register a Photo/Painting/Digital Illustration as NFT</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Tech,NFT</span>
+                          </div>
+                            <p class="pe-md-5">
+                              Register and sell you art work as NFT
+                            </p>
+                            <a href="./blog-pages/nft/ntf-setting-blog.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
                     </div>
