--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -23,10 +23,13 @@
                 <span class="navbar-toggler-icon text-white"></span>
               </button>
               <div class="collapse navbar-collapse navbar-light" id="navbarNav">
-                <ul class="navbar-nav ms-lg-auto">
+                <ul class="navbar-nav ms-lg-auto align-items-center">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
+                  <li>
+                    <a href="https://www.facebook.com/profile.php?id=61574216155418" class="mt-4"><i class="fa-brands fa-facebook"></i></a>
+                </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
                   </li>
