--- a/samples/blog-details.html
+++ b/samples/blog-details.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page-main">
         <!-- navbar mobile screens -->
-        <div class="shadow">
+        <div class="shadow pos-ft">
           <nav class="navbar navbar-expand-lg container-lg">
             <div class="container-fluid">
               <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily Tech Help</a>
