--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daily Tech Help</title>
     <link rel="stylesheet" href="./assets/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-grid.min.css">
@@ -73,6 +74,20 @@
                               Register and sell you art work as NFT
                             </p>
                             <a href="./blog-pages/nft/ntf-setting-blog.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">How to Sell Your Product Through Amazon: What Are the Procedures to Be Done</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">E-commerce</span>
+                          </div>
+                            <p class="pe-md-5">
+                              Basic Requirements to Register as a Seller on Amazon India
+                            </p>
+                            <a href="./blog-pages/amazon/how-to-sell-your-product-on-amazon.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
                     </div>
