--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./assets/custom.css">
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="TsNsByUsynHlujV50pKocQ" async></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Document</title>
 </head>
 <body>
