ffmpeg installation page added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
                             <a href="./blog-pages/web-cam-streaming/web-streaming-docs-webrtc.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">How to install ffmpeg in windows</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Multimedia</span>
+                          </div>
+                            <p class="pe-md-5">
+                             FFmpeg is a powerful tool used to convert, record, stream, and process audio and video files.
+                            </p>
+                            <a href="./blog-pages/ffmpeg-installation/ffmpeg-installation.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
                     </div>
                   </div>
                   <!-- <div class="col-12 mt-4">
