--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@
                             <a href="./blog-pages/ffmpeg-installation/ffmpeg-installation.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">Embed MP4 Video in HTML using Google Drive</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Multimedia/Web Development</span>
+                          </div>
+                            <p class="pe-md-5">
+                             Step-by-step guide with comparisons and best practices for embedding videos on your website.
+                            </p>
+                            <a href="./blog-pages/use-video-stored-in-drive-on-html/use-video-stored-in-google-drive-in-html.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
                     </div>
                   </div>
                   <!-- <div class="col-12 mt-4">
