--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <div class="col-12">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                         <div class="mt-3 mt-md-4">
-                          <div class="fw-semibold fs-5">Embed MP4 Video in HTML using Google Drive</div>
+                          <div class="fw-semibold fs-5">Embed MP4 Video in HTML whith is stored in Google Drive</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
                             <span class="text-light ms-2">Multimedia/Web Development</span>
@@ -137,7 +137,7 @@
                       <div class="col-12">
                         <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
                         <div class="mt-3 mt-md-4">
-                          <div class="fw-semibold fs-5">Embed Gif in HTML using Google Drive</div>
+                          <div class="fw-semibold fs-5">Embed Gif in HTML which is stored in Google Drive</div>
                           <div class="my-2">
                             <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
                             <span class="text-light ms-2">Multimedia/Web Development</span>
