namecheap dns settings, wordpress hosting options

--- a/index.html
+++ b/index.html
@@ -148,6 +148,32 @@
                             <a href="./blog-pages/embed-gifs-in-html-from-google-drive/embed-gifs-in-html-from-google-drive.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">Set Up Custom domain to github page using Namecheap</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Multimedia/Web Development</span>
+                          </div>
+                            <p class="pe-md-5">
+                            </p>
+                            <a href="./blog-pages/deployment/name-cheap/how-to-set-custom-domain-to-github-pages-using-namecheap.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">Affordable WordPress Hosting Options in India (2025) - Full Comparison</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Multimedia/Web Development</span>
+                          </div>
+                            <p class="pe-md-5">
+                            </p>
+                            <a href="./blog-pages/wordpress/affordable-wordpress-hosting-in-2025.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
                     </div>
                   </div>
                   <!-- <div class="col-12 mt-4">
