--- a/blog-pages/wordpress/learing-and-experimenting-wordpress.html
+++ b/blog-pages/wordpress/learing-and-experimenting-wordpress.html
@@ -26,7 +26,32 @@
   </style>
 </head>
 <body>
-
+             <div class="shadow fixed-top z-max bg-white">
+          <nav class="navbar navbar-expand-lg container-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily Tech Help</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon text-white"></span>
+              </button>
+              <div class="collapse navbar-collapse navbar-light" id="navbarNav">
+                <ul class="navbar-nav ms-lg-auto align-items-center">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  </li>
+                  <li>
+                    <a href="https://www.facebook.com/profile.php?id=61574216155418" class="mt-4"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li> -->
+                </ul>
+              </div>
+            </div>
+          </nav>
+         </div>
 <div class="hero bg-success">
   <h1>Best Hosting Options for Learning & Experimenting with WordPress</h1>
   <p class="lead">A beginner-friendly guide to hosting providers ideal for WordPress practice and experimentation</p>
