--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
                             <a href="./blog-pages/wordpress/learing-and-experimenting-wordpress.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
+                      <div class="col-12">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-4">
+                          <div class="fw-semibold fs-5">Instagram Algorithm for New Accounts: Tips & Strategy</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Social Media/Instagram</span>
+                          </div>
+                            <p class="pe-md-5">
+                            </p>
+                            <a href="./blog-pages/instagram/instagram-algorithm-for-new-accounts-tips-and-stragegy.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
                     </div>
                   </div>
                   <!-- <div class="col-12 mt-4">
