free seo keyword analysis tools 2025, blog post added

--- a/index.html
+++ b/index.html
@@ -216,6 +216,19 @@
                             <a href="./blog-pages/deployment/github/how-to-deploy-private-repository-with-custom-domain.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
                           </div>
                       </div>
+                      <div class="col-12 mt-3">
+                        <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
+                        <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                          <div class="fw-semibold fs-5">Top Free SEO Keyword Analysis Tools (2025)</div>
+                          <div class="my-2">
+                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fs-1 fw-bold">2025</small></span>
+                            <span class="text-light ms-2">Digital Marketing/Seo/Blogging/Content Creation</span>
+                          </div>
+                            <p class="pe-md-5">
+                            </p>
+                            <a href="./blog-pages/digital-marketing/seo/top-free-seo-keyword-analysis-tools-2025.html" target="_blank" class="btn btn-outline-primary btn-sm px-4">Read</a>
+                          </div>
+                      </div>
                     </div>
                   </div>
                   <!-- <div class="col-12 mt-4">
