home page meta tags, h1 added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Tech Help</title>
+    <meta name="description" content="Get daily help with software, web development, and digital marketing. Explore tutorials, tools, and resources to boost your skills and productivity." />
+
+    <meta name="keywords" content="web development tutorials, digital marketing tips, software tools, daily tech help, web design resources, SEO tools, development guides, marketing strategies" />
+
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:title" content="Software, Web Development, and Digital Marketing Help" />
+    <meta property="og:description" content="Explore daily tutorials, tools, and resources for software, web development, and digital marketing." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://https://dailytechhelp.site/" />
+    <!-- <meta property="og:image" content="https://yourdomain.com/assets/cover-image.jpg" /> -->
     <link rel="stylesheet" href="./assets/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-grid.min.css">
@@ -48,6 +59,7 @@
            <div class="py-3" style="z-index: 0;">
               <div class="container-lg py-5">
                 <div class="text-center mb-5">
+                  <h1>Software, Web Development, and Digital Marketing Help <br> Daily Tutorials, Tools, and Resources</h1>
                   <p class="fs-5 text-muted">Guides, Tutorials, and How-Tos for Everyday Tech Problems and Web Development</p>
                 </div>
                 <div class="row m-0">
