--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Tech Help</title>
+    <title>Daily Tech Help: Software, Web Development, and Digital Marketing Help – Daily Tutorials, Tools, and Resources</title>
     <meta name="description" content="Get daily help with software, web development, and digital marketing. Explore tutorials, tools, and resources to boost your skills and productivity." />
 
     <meta name="keywords" content="web development tutorials, digital marketing tips, software tools, daily tech help, web design resources, SEO tools, development guides, marketing strategies" />
