handbrake post fixes

--- a/blog-pages/nft/ntf-setting-blog.html
+++ b/blog-pages/nft/ntf-setting-blog.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT Minting Guide - How to Register Digital Art as an NFT</title>
+    <title>NFT Minting Guide – How to Register Digital Art as an NFT</title>
+
+    <meta name="description" content="Learn how to mint and register your digital art as an NFT. A complete beginner-friendly guide to NFT creation, blockchain platforms, and marketplaces." />
+
+    <meta name="keywords" content="NFT minting guide, how to mint an NFT, register digital art NFT, create NFT art, NFT for beginners, digital art blockchain, NFT tutorial, NFT marketplace" />
+
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:title" content="NFT Minting Guide – How to Register Digital Art as an NFT" />
+    <meta property="og:description" content="Step-by-step guide to minting your digital art as an NFT. Learn about platforms, wallets, and NFT marketplaces." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dailytechhelp.site/nft-minting-guide" />
+    <!-- <meta property="og:image" content="https://dailytechhelp.site/assets/nft-guide-cover.jpg" /> -->
     <link rel="stylesheet" href="../../assets/bootstrap.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-grid.min.css">
