--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Software, Web Development, and Digital Marketing Help" />
     <meta property="og:description" content="Explore daily tutorials, tools, and resources for software, web development, and digital marketing." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://https://dailytechhelp.site/" />
+    <meta property="og:url" content="https://dailytechhelp.site/" />
     <!-- <meta property="og:image" content="https://yourdomain.com/assets/cover-image.jpg" /> -->
     <link rel="stylesheet" href="./assets/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-utilities.min.css">
