--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-grid.min.css">
     <link rel="stylesheet" href="../../assets/custom.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Document</title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Document</title> -->
 </head>
 <body>
     <div class="page-main">
@@ -91,16 +91,16 @@
         <div class="container">
           <div class="d-flex justify-content-center">
             <ul class="d-flex list-unstyled">
-              <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/fb.svg" alt=""></a></li>
+              <!-- <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/fb.svg" alt=""></a></li>
               <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/insta.svg" alt=""></a></li>
               <li class="me-3"><a class="text-decoration-none"><img src="./assets/images/icons/x.svg" alt=""></a></li>
-              <li><a class="text-decoration-none"><img src="./assets/images/icons/LinkedIn.svg" alt=""></a></li>
+              <li><a class="text-decoration-none"><img src="./assets/images/icons/LinkedIn.svg" alt=""></a></li> -->
             </ul>
           </div>
           <div class="text-center">Copyright ©<div id="footer-year" class="d-inline"></div> All rights reserved </div>
         </div>
        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="./assets/script.js"></script>
+    <script src="../../assets/script.js"></script>
 </body>
 </html>
