--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Convert video to supported formats using Handbrake</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Convert video to supported formats using Handbrake">
     <meta name="keywords" content="handbrake, video conversion, convert video to mp4, RAV1N encoding">
