google analytics tags added, changed page redirection mode, add new page in the same tab

--- a/blog-pages/amazon/how-to-sell-your-product-on-amazon.html
+++ b/blog-pages/amazon/how-to-sell-your-product-on-amazon.html
@@ -58,6 +58,17 @@
       margin-top: 10px;
     }
   </style>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
 </head>
 <body>
   <h1>How to Sell Your Product Through Amazon: What Are the Procedures to Be Done</h1>
