--- a/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
+++ b/blog-pages/convert-video-using-handbrake/convert-video-using-handbrake.html
@@ -1,94 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>Convert video to supported formats using Handbrake</title>
+    <title>Guide to Convert video to supported formats using Handbrake</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Convert video to supported formats using Handbrake">
-    <meta name="keywords" content="handbrake, video conversion, convert video to mp4, RAV1N encoding">
+    <meta name="description"
+      content="Guide to Convert video to supported formats using Handbrake">
+    <meta name="keywords"
+      content="handbrake, video conversion, convert video to mp4, RAV1N encoding">
     <meta name="author" content="Naveen V">
     <link rel="stylesheet" href="../../assets/bootstrap.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="../../assets/bootstrap-grid.min.css">
     <link rel="stylesheet" href="../../assets/custom.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Document</title> -->
-</head>
-<body>
+  </head>
+  <body>
     <div class="page-main">
-        <!-- navbar mobile screens -->
-        <div class="shadow">
-          <nav class="navbar navbar-expand-lg container-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily Tech Help</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon text-white"></span>
-              </button>
-              <div class="collapse navbar-collapse navbar-light" id="navbarNav">
-                <ul class="navbar-nav ms-lg-auto align-items-center">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                  </li>
-                  <li>
-                    <a href="https://www.facebook.com/profile.php?id=61574216155418" class="mt-4"><i class="fa-brands fa-facebook"></i></a>
+      <!-- navbar mobile screens -->
+      <div class="shadow">
+        <nav class="navbar navbar-expand-lg container-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand text-primary fs-4 fw-bold" href="/">Daily
+              Tech Help</a>
+            <button class="navbar-toggler" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon text-white"></span>
+            </button>
+            <div class="collapse navbar-collapse navbar-light" id="navbarNav">
+              <ul class="navbar-nav ms-lg-auto align-items-center">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page"
+                    href="/">Home</a>
                 </li>
-                  <!-- <li class="nav-item">
+                <li>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=61574216155418"
+                    class="mt-4"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Blog</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                   </li> -->
-                </ul>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!-- Recent posts -->
+
+      <!-- blog article -->
+      <div class="py-5">
+        <div class="container-lg">
+          <div class="row">
+            <div class="col-12">
+              <div class="row pb-3">
+                <div class="col-12">
+                  <h1 class="mb-4 fs-2 fw-bold">Convert video to supported
+                    formats using Handbrake</h1>
+                  <div class="my-4">
+                    <span class="bg-primary text-white rounded-4 px-3"><small
+                        class="fs--1 fw-bold">2025</small></span>
+                    <span class="ms-2">
+                    </span>
+                  </div>
+                  <p class="text-gray">HandBrake is a open-source tool, built by
+                    volunteers, for converting video from nearly any format to a
+                    selection of modern, widely supported codecs.</p>
+                  <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 1</div>
+                  <p>
+                    Download and install Handbrake from the <a target="_blank"
+                      href="https://handbrake.fr/">official website</a>
+                  </p>
+                </div>
+                <div class="col-12">
+                  <div class="fs-5 mb-2 fw-bold mt-3 text-gray">Step 2</div>
+                  <p>Open Handbrake Application and import video file which is
+                    needed to convert</p>
+                  <img src="./hand-brake-dag-and-drop.png"
+                    class="img-fluid w-md-50 w-md-75 lg-w-50 mt-4 me-5" alt>
+                </div>
+                <div class="col-12">
+                  <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 3</div>
+                  <p>Set output format and other settings</p>
+                  <img src="./2-handbrake-select-file-type.png"
+                    class="img-fluid w-md-75 mt-4 me-5" alt>
+                </div>
+                <div class="col-12">
+                  <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 4</div>
+                  <p>Click "Start encode" to initiate the conversion</p>
+                  <img src="./3-start-encode.png"
+                    class="img-fluid w-md-75 mt-4 me-5" alt>
+                </div>
+                <div class="col-12">
+                  <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 5</div>
+                  <p>Conversion will be processed. After completion check
+                    converted file on the saved location.</p>
+                  <img src="./4-handbrake-loading.png"
+                    class="img-fluid w-md-75 mt-4 me-5" alt>
+                </div>
               </div>
             </div>
-          </nav>
-         </div>
-          <!-- Recent posts -->
-
-          <!-- blog article -->
-           <div class="py-5">
-              <div class="container-lg">
-                <div class="row">
-                  <div class="col-12">
-                    <div class="row pb-3">
-                      <div class="col-12">
-                        <h1 class="mb-4 fs-2 fw-bold">Convert video to supported formats using Handbrake</h1>
-                        <div class="my-4">
-                            <span class="bg-primary text-white rounded-4 px-3"><small class="fs--1 fw-bold">2025</small></span>
-                            <span class="ms-2">
-                            </span>
-                          </div>
-                          <p class="text-gray">HandBrake is a open-source tool, built by volunteers, for converting video from nearly any format to a selection of modern, widely supported codecs.</p>
-                         <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 1</div>
-                         <p>
-                          Download and install Handbrake from the <a target="_blank" href="https://handbrake.fr/">official website</a>
-                          </p>
-                      </div>
-                      <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-3 text-gray">Step 2</div>
-                        <p>Open Handbrake Application and import video file which is needed to convert</p>
-                        <img src="./hand-brake-dag-and-drop.png" class="img-fluid w-md-50 w-md-75 lg-w-50 mt-4 me-5" alt="">
-                      </div>
-                      <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 3</div>
-                        <p>Set output format and other settings</p>
-                        <img src="./2-handbrake-select-file-type.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
-                      </div>
-                      <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 4</div>
-                        <p>Click "Start encode" to initiate the conversion</p>
-                        <img src="./3-start-encode.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
-                      </div>
-                      <div class="col-12">
-                        <div class="fs-5 mb-2 fw-bold mt-5 text-gray">Step 5</div>
-                        <p>Conversion will be processed. After completion check converted file on the saved location.</p>
-                        <img src="./4-handbrake-loading.png" class="img-fluid w-md-75 mt-4 me-5" alt="">
-                      </div>
-                    </div>
-                  </div>
-              </div>
-           </div>
-    </div>
-    <footer class="py-4 py-lg-4 border-top">
+          </div>
+        </div>
+      </div>
+      <footer class="py-4 py-lg-4 border-top">
         <div class="container">
           <div class="d-flex justify-content-center">
             <ul class="d-flex list-unstyled">
@@ -98,10 +130,14 @@
               <li><a class="text-decoration-none"><img src="./assets/images/icons/LinkedIn.svg" alt=""></a></li> -->
             </ul>
           </div>
-          <div class="text-center">Copyright ©<div id="footer-year" class="d-inline"></div> All rights reserved </div>
+          <div class="text-center">Copyright ©<div id="footer-year"
+              class="d-inline"></div> All rights reserved </div>
         </div>
-       </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../../assets/script.js"></script>
-</body>
-</html>
+      </footer>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+      <script src="../../assets/script.js"></script>
+    </body>
+  </html>
