--- a/blog-pages/deployment/github/how-to-deploy-private-repository-with-custom-domain.html
+++ b/blog-pages/deployment/github/how-to-deploy-private-repository-with-custom-domain.html
@@ -31,6 +31,17 @@
       color: #6685b5;
     }
   </style>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZGF7J4QMPL');
+  </script>
+
 </head>
 <body class="pt-9">
              <div class="shadow fixed-top z-max bg-white">
