--- a/blog-pages/digital-marketing/seo/top-free-seo-keyword-analysis-tools-2025.html
+++ b/blog-pages/digital-marketing/seo/top-free-seo-keyword-analysis-tools-2025.html
@@ -12,6 +12,17 @@
       <!-- <link rel="stylesheet" href="../../../assets/bootstrap.min.css">
     <link rel="stylesheet" href="../../../assets/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="../../../assets/bootstrap-grid.min.css"> -->
+    
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZGF7J4QMPL');
+  </script>
+
   <style>
     body {
       padding-top: 2rem;
