--- a/blog-pages/nft/ntf-setting-blog.html
+++ b/blog-pages/nft/ntf-setting-blog.html
@@ -22,6 +22,16 @@
     <link rel="stylesheet" href="../../assets/bootstrap-grid.min.css">
     <link rel="stylesheet" href="../../assets/custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Document</title>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
 
     <style>
         body {
