--- a/blog-pages/software-localization/issues-on-using-malayalam-on-software-systems.html
+++ b/blog-pages/software-localization/issues-on-using-malayalam-on-software-systems.html
@@ -43,6 +43,17 @@
       margin: 20px 0;
     }
   </style>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
 </head>
 <body>
   <h1>Technical Challenges in Malayalam Localization for Government Software Systems</h1>
