--- a/blog-pages/deployment/name-cheap/how-to-set-custom-domain-to-github-pages-using-namecheap.html
+++ b/blog-pages/deployment/name-cheap/how-to-set-custom-domain-to-github-pages-using-namecheap.html
@@ -9,6 +9,17 @@
   <title>How to set Custom Domain to github pages using namecheap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../../assets/custom.css">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZGF7J4QMPL');
+  </script>
+
 </head>
 <body class="pt-5">
          <div class="shadow fixed-top z-max bg-white">
