--- a/blog-pages/embed-gifs-in-html-from-google-drive/embed-gifs-in-html-from-google-drive.html
+++ b/blog-pages/embed-gifs-in-html-from-google-drive/embed-gifs-in-html-from-google-drive.html
@@ -8,6 +8,17 @@
   <meta name="author" content="Your Name" />
   <title>How to Embed GIF in HTML Using Google Drive</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZGF7J4QMPL');
+  </script>
+
 </head>
 <body>
 
