--- a/blog-pages/ffmpeg-installation/ffmpeg-installation.html
+++ b/blog-pages/ffmpeg-installation/ffmpeg-installation.html
@@ -15,6 +15,17 @@
 
   <!-- Optional Bootstrap Icons (if needed) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
 </head>
 <body class="bg-light text-dark">
              <div class="shadow">
