--- a/blog-pages/use-video-stored-in-drive-on-html/use-video-stored-in-google-drive-in-html.html
+++ b/blog-pages/use-video-stored-in-drive-on-html/use-video-stored-in-google-drive-in-html.html
@@ -8,6 +8,17 @@
   <meta name="author" content="Your Name" />
   <title>Embed MP4 Video in HTML Using Google Drive & Alternatives</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
 </head>
 <body>
 
