--- a/blog-pages/web-cam-streaming/web-streaming-docs-webrtc.html
+++ b/blog-pages/web-cam-streaming/web-streaming-docs-webrtc.html
@@ -43,6 +43,17 @@
       overflow-x: auto;
     }
   </style>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
 </head>
 <body>
   <div class="container">
