--- a/blog-pages/wordpress/affordable-wordpress-hosting-in-2025.html
+++ b/blog-pages/wordpress/affordable-wordpress-hosting-in-2025.html
@@ -9,6 +9,17 @@
   <title>Affordable WordPress Hosting Options in India (2025) - Full Comparison</title>
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="../../assets/bootstrap.min.css">
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZGF7J4QMPL');
+</script>
+
 </head>
 <body>
              <div class="shadow fixed-top z-max bg-white">
