--- a/blog-pages/wordpress/learing-and-experimenting-wordpress.html
+++ b/blog-pages/wordpress/learing-and-experimenting-wordpress.html
@@ -24,6 +24,17 @@
       /* color: var(--color-success); */
     }
   </style>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZGF7J4QMPL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZGF7J4QMPL');
+  </script>
+
 </head>
 <body>
              <div class="shadow fixed-top z-max bg-white">
