blog cards thumnails added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="row mt-4" v-if="currentTab === 'multimedia'">
                 <div class="col-md-6 col-lg-4">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
                     <h3 class="fw-semibold fs-5">How to convert video using
                       Handbrake</h3>
                     <div class="my-2">
@@ -170,7 +170,7 @@
                 </div>
                                 <div class="col-md-6 col-lg-4">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm shadow-sm">
                     <div class="fw-semibold fs-5">How to install ffmpeg in
                       windows</div>
                     <div class="my-2">
@@ -193,7 +193,7 @@
                 <div class="row mt-4" v-if="currentTab === 'blockchain'">
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-5 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-5 mt-md-0 border p-3 rounded-2 shadow-sm">
                     <div class="fw-semibold fs-5">How to Register a
                       Photo/Painting/Digital Illustration as NFT</div>
                     <div class="my-2">
@@ -214,7 +214,7 @@
                 <div class="row" v-if="currentTab === 'e-commerce'">
                 <div class="col-12 col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
                     <div class="fw-semibold fs-5">How to Sell Your Product
                       Through Amazon: What Are the Procedures to Be Done</div>
                     <div class="my-2">
@@ -236,8 +236,11 @@
                  <div class="row" v-if="currentTab === 'web-dev'">
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
-                    <div class="fw-semibold fs-5">How to Add Webcam
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                    <div class="card-img-container">
+                      <img src="./blog-pages/web-cam-streaming/assets/waldemar-VAoSKP_ocN0-unsplash.jpg" class="img-fluid rounded-1" alt="">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-2">How to Add Webcam
                       Functionality to a Web Page</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -260,8 +263,11 @@
 
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
-                    <div class="fw-semibold fs-5">Embed MP4 Video in HTML whith
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                    <div class="card-img-container">
+                      <img src="./blog-pages/use-video-stored-in-drive-on-html/assets/kelly-sikkema-DIg2s3htXEE-unsplash.jpg" class="img-fluid rounded-1" alt="">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-3">Embed MP4 Video in HTML which
                       is stored in Google Drive</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -281,8 +287,11 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
-                    <div class="fw-semibold fs-5">Embed Gif in HTML which is
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                    <div class="card-img-container">
+                      <img src="./blog-pages/embed-gifs-in-html-from-google-drive/assets/ph-m-nh-t-v-4C7dniwlw-unsplash.jpg" class="img-fluid rounded-1" alt="">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-4">Embed Gif in HTML which is
                       stored in Google Drive</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -302,7 +311,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                    <div class="card-img-container">
+                      <img src="./blog-pages/deployment/name-cheap/assets/thumbnail-github-and-namecheap.png" class="img-fluid rounded-1" alt="logoes of github and namecheap">
+                    </div>
                     <div class="fw-semibold fs-5">Set Up Custom domain to github
                       page using Namecheap</div>
                     <div class="my-2">
@@ -321,8 +333,11 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
-                    <div class="fw-semibold fs-5">Affordable WordPress Hosting
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                     <div class="card-img-container">
+                      <img src="./blog-pages/wordpress/assets/souvik-banerjee--WPrNEM_6dg-unsplash.jpg" class="img-fluid rounded-1" alt="logoes of github and namecheap">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-2">Affordable WordPress Hosting
                       Options in India (2025) - Full Comparison</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -340,7 +355,10 @@
                 </div>
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
+                    <div class="card-img-container">
+                      <img src="./blog-pages/wordpress/assets/souvik-banerjee--WPrNEM_6dg-unsplash.jpg" class="img-fluid rounded-1" alt="wordpress app image">
+                    </div>
                     <div class="fw-semibold fs-5">Best Hosting Options for
                       Learning & Experimenting with WordPress</div>
                     <div class="my-2">
@@ -359,8 +377,11 @@
                 </div>
                                 <div class="col-12 col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
-                    <div class="fw-semibold fs-5">How to Deploy a Private GitHub
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm cursor-pointer" onclick="location.href='./blog-pages/deployment/github/how-to-deploy-private-repository-with-custom-domain.html'">
+                    <div class="card-img-container">
+                      <img src="./blog-pages/deployment/github/assets/rubaitul-azad-HLQDfaJUTVI-unsplash.jpg" class="img-fluid rounded-1" alt="github image">
+                    </div>
+                    <div class="fw-semibold fs-5 mt-2">How to Deploy a Private GitHub
                       Repository with a Custom Domain</div>
                     <div class="my-2">
                       <span class="bg-primary text-white rounded-4 px-3"><small
@@ -381,7 +402,7 @@
                  <div class="row" v-if="currentTab === 'social-media'">
                 <div class="col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
                     <div class="fw-semibold fs-5">Instagram Algorithm for New
                       Accounts: Tips & Strategy</div>
                     <div class="my-2">
@@ -402,7 +423,7 @@
                 <div class="row" v-if="currentTab === 'digital-marketing'">
                 <div class="col-12 col-md-6 col-lg-4 mt-3">
                   <!-- <div class="mb-5 fs-2 fw-bold">Blogs</div> -->
-                  <div class="mt-3 mt-md-0 border p-3 rounded-2">
+                  <div class="mt-3 mt-md-0 border p-3 rounded-2 shadow-sm">
                     <div class="fw-semibold fs-5">Top Free SEO Keyword Analysis
                       Tools (2025)</div>
                     <div class="my-2">
